--- a/frontend/src/app/voting/voting.component.html
+++ b/frontend/src/app/voting/voting.component.html
@@ -1,4 +1,6 @@
-<p>
-  voting works!
-</p>
-<app-drag-list></app-drag-list>
+<h1>Voting page</h1>
+
+<app-drag-list
+  [candidates]="candidateTest"
+  [title]="titleTest">
+</app-drag-list>
