--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,11 +7,11 @@
     </div>
 
     <div fxLayout='row' fxLayoutAlign="center">
-      <button md-raised-button color="primary" routerLink="/voting">Enter Voting</button>
+      <button md-raised-button color="primary" routerLink="/voting/">Enter Voting</button>
     </div>
 
     <div fxLayout='row' fxLayoutAlign="center">
-      <button md-raised-button color="primary" routerLink="/create">Create Voting</button>
+      <button md-raised-button color="primary" routerLink="/voting">Create Voting</button>
     </div>
   </form>
 </div>
