--- a/frontend/src/app/voting/voting.component.html
+++ b/frontend/src/app/voting/voting.component.html
@@ -1,6 +1,8 @@
 <h1>Voting page</h1>
 
 <app-drag-list
-  [candidates]="candidateTest"
-  [title]="titleTest">
+  [candidates]="alternatives"
+  [title]="title">
 </app-drag-list>
+<button md-raised-button color="primary" (click)="submitVote()">Stem</button>
+
