--- a/frontend/src/app/voting-result/voting-result.component.html
+++ b/frontend/src/app/voting-result/voting-result.component.html
@@ -10,7 +10,7 @@
     </p>
   </md-list-item>
 </md-list>
-<h3>Kemenie</h3>
+<h3>Kemeny</h3>
 <md-list>
   <md-list-item
     style="border: 1px solid darkgrey;
