--- a/frontend/src/app/create-voting/create-voting.component.html
+++ b/frontend/src/app/create-voting/create-voting.component.html
@@ -12,37 +12,68 @@
     </md-form-field>
   </div>
   <div class="form-group">
-    <md-form-field>
-      <input mdInput [(ngModel)]="option"  placeholder="Valg mulighed"/>
-    </md-form-field>
-    <button md-raised-button (click)="addOption(option)" color="primary">Tilføj</button>
-  </div>
-  <div class="form-group">
     <div fxLayout='column' fxFlex="33">
+      <span fxLayout='row'>
+        Valg muligheder
+      </span>
       <md-list>
-        <md-list-item
-          style="border: 1px solid darkgrey;
-          background-color: #1CA9F0;"
-          *ngFor="let item of options;let i = index">
-          <p nfIf="item.edit" mdLine>
-            {{item}}
-          </p>
-          <button md-raised-button
-                  color="warn"
-                  (click)="removeOption(i)">
-            Fjern
-          </button>
+        <md-list-item style="border: 1px solid darkgrey; background-color: #1CA9F0;" *ngFor="let item of options; let i = index" dnd-draggable [dragEnabled]="true" [dragData]="item">
+          {{item | json}}
         </md-list-item>
       </md-list>
     </div>
+    <div fxLayout='column' fxFlex="15">
+    </div>
+    <div fxLayout='column' fxFlex="33">
+      <span fxLayout='row'>
+        Valgt til afstemning:
+      </span>
+      <md-list dnd-droppable class="panel panel-info" (onDropSuccess)="transferDataSuccess($event)">
+          <md-list-item style="border: 1px solid darkgrey; background-color: #1CA9F0;" [hidden]="!receivedData.length > 0" *ngFor="let data of receivedData">{{data | json}}</md-list-item>
+      </md-list>
+    </div>
   </div>
+
   <div class="form-group">
+
+    <button md-raised-button
+            color="primary"
+            (click)="backOptions()">
+      Tilbage
+    </button>
+
+
+    <div fxLayout='column' fxFlex="66">
+    </div>
+
+    <div *ngIf="currentRound == 2">
+      <button md-raised-button
+              color="primary"
+              (click)="createVoting()">
+        Opret afstemning
+      </button>
+    </div>
+    <div *ngIf="currentRound < 2">
+
+      <button md-raised-button
+              color="primary"
+              (click)="nextOptions()">
+        Næste
+      </button>
+    </div>
+
+  </div>
+
+
+  <!--<div class="form-group">
     <button md-raised-button
             color="primary"
             (click)="createVoting()">
       Opret afstemning
     </button>
-  </div>
+  </div>-->
+
+
 
 
 
