ranked pairs result page

--- a/frontend/src/app/voting-result/voting-result.component.html
+++ b/frontend/src/app/voting-result/voting-result.component.html
@@ -13,4 +13,12 @@
   Biograf: {{kemenieResult['cinema']}}
 </p>
 
+<h3>Rnaked Pairs</h3>
+<p>
+  Tid: {{rankedResult['time']}}
+  Film: {{rankedResult['movie']}}
+  Biograf: {{rankedResult['cinema']}}
+</p>
+
+
 
